# FYP-FinAgent

./: .gitignore  FAKE_FILES_README.md  LICENSE  LLM_ENHANCED_STRATEGY_SUMMARY.md  PIPELINE_GUIDE.md  QUICK_START.md  README.md  README_LLM_STRATEGY.md  README_Phase1.md  README_Phase2.md  TECHNICAL_APPENDIX.md  advanced_ensemble.py  advanced_feature_engineering.py  advanced_market_timing.py  aggressive_trading_system.py  analyze_weights.py  apikeys.env  clean_data.py  colab_setup.py  corrected_phase2.py  corrected_realistic_phase2.py  data_loader.py  data_utils.py  debug_portfolio_calculation.py  download_data.py  download_reddit_data.py  download_twitter_data.py  ensemble_agents.py  eval_plain_rl_lstm.py  eval_ppo.py  eval_ppo_1.py  eval_ppo_feature_combinations.py  eval_ppo_mlp_feature_combinations.py  eval_ppo_transformer.py  eval_rl_lgbm.py  eval_unified_framework.py  evaluate_all_models.sh  evaluation_metrics.py  example_feature_training.py  example_simple_strategies.py  (+72 more)
.claude/: settings.local.json
evaluation_results/: PERFORMANCE_SUMMARY_20251009_225624.txt  checkpoint_1000000_steps_evaluation_20250829_144400.json  checkpoint_100000_steps_evaluation_20250829_144400.json  checkpoint_150000_steps_evaluation_20250829_144400.json  checkpoint_200000_steps_evaluation_20250829_144400.json  (+22 more)
portfolio_45_short/: README.md  evaluate.py  pyproject.toml  train_ppo.py
portfolio_45_short/data/: __init__.py  synthetic_data.py
portfolio_45_short/envs/: __init__.py  portfolio_45_short_env.py
portfolio_45_short/utils/: __init__.py  metrics.py  weights_projection.py
(+3181 files in other folders)
